syntax = "proto3";

package api;

option go_package = "github.com/bottos-project/bottos/api";

/*
Transaction Example:
{
	"version": 1,
	"cursor_num": 16,
	"cursor_label": 1103678153,
	"lifetime": 1524802579,
	"sender": "bottos",
	"contract": "bottos",
	"method": "transfer",
	"param": "dc0002da000964656c656761746531da000964656c656761746532cf000000000000270f",
	"sig_alg": 1,
	"signature": "514d24e75fcb68a00240bcf98248544944edaa3df9a90533edd7c81e4010d236"
}
*/

// Transaction definition for gprc interface
message Transaction {
	uint32 			version						= 1; //ambiguous
	uint64 			cursor_num	              	= 2;
	uint32 			cursor_label		      	= 3;
	uint64 			lifetime	               	= 4;
	string		 	sender                  	= 5; // max length: 16
	string		 	contract               		= 6; // example: assetmanager@bottoscon, max length: 32
	string	 		method                   	= 7; // max length: 16
	string 			param                     	= 8; 
	uint32 		    sig_alg						= 9;
	string   	    signature 					= 10;
}
